# rpc_parallel

./: CHANGES.md  INSTALL.txt  LICENSE.md  META.ab  Makefile  README  README.org  _oasis  _tags  install.ml  myocamlbuild.ml  opam  rpc_parallel.opam  setup.ml
core/example/: errors.ml  jbuild  simple.ml  test_zombies.ml  timeouts.ml
core/src/: jbuild  parallel.ml  parallel.mli  rpc_parallel_core.mldylib  rpc_parallel_core.mlpack  std.ml  worker.ml  worker_id.ml  worker_id.mli
doc/: main.org  migrating-off-managed.org
example/: abort_direct_pipe.ml  add_numbers.ml  alternative_init.ml  async_log.ml  copy_executable.ml  dune  env_test.ml  jbuild  number_stats.ml  on_failure.ml  remote_path_does_not_exist.ml  reverse_direct_pipe.ml  reverse_pipe.ml  rpc_direct_pipe.ml  run_exn.ml  serve.ml  side_arg.ml  simple.ml  spawn_in_foreground.ml  stream_workers.ml  stress_test.ml  timeouts.ml  worker_binprot.ml  worker_binprot2.ml  workers_as_masters.ml
examples/: copy_executable.ml  env_test.ml  side_arg.ml  simple.ml  stress_test.ml  worker_binprot.ml  worker_binprot2.ml
examples_core/: simple.ml  test_zombies.sh
expect_test/: dune  jbuild  managed_on_failure.ml  master_pid_decoration.ml  no_fd_leak_on_failure.ml  product_worker.ml  rpc_parallel_expect_test.ml  state_worker.ml  sum_worker.ml  sum_worker.mli  workers.ml
js-utils/: install_tags.ml
krb/: backend.ml  backend.mli  dune  mode.ml  mode.mli  rpc_parallel_krb_public.ml  start_app.ml  start_app.mli
lib/: META  map_reduce.mli  parallel.ml  parallel.mli  rpc_parallel.mlpack
lib_core/: parallel.ml  parallel.mli  rpc_parallel_core.mlpack  worker.ml  worker.mli
lib_test/: qtest.ml
src/: META  dune  executable_location.ml  fd_redirection.ml  fd_redirection.mli  for_testing_internal.ml  for_testing_internal.mli  how_to_run.ml  how_to_run.mli  jbuild  managed.ml  managed.mli  map_reduce.ml  map_reduce.mli  parallel.ml  parallel.mli  parallel_intf.ml  parallel_managed.ml  parallel_managed.mli  prog_and_args.ml  remote_executable.ml  remote_executable.mli  rpc_parallel.ml  rpc_parallel.mldylib  rpc_parallel.mlpack  rpc_settings.ml  rpc_settings.mli  std.ml  utils.ml  utils.mli
test/: breaking_things.ml  buffer_age_limit.ml  copy_executable.ml  dune  env_test.ml  fd.ml  krb_expert.ml  print_and_run.sh  qtest.ml  raise_on_connection_state_init.ml  remove_running_executable.ml  run_exn.ml  setup.sh  shutdown_during_worker_init.ml  spawn_in_foreground_zombie.ml  ssh_test_server.sh  stress_test.ml  test-examples.t  test-rpc-settings.t  timeouts.ml  wrap_test.ml
unauthenticated/: backend.ml  backend.mli  dune  rpc_parallel_unauthenticated.ml  start_app.ml  start_app.mli
