opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/rpc_parallel"
bug-reports: "https://github.com/janestreet/rpc_parallel/issues"
dev-repo: "https://github.com/janestreet/rpc_parallel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "rpc_parallel" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "core"
  "jbuilder"                {build}
  "ppx_driver"
  "ppx_jane"
  "sexplib"
  "ocaml-migrate-parsetree"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Type-safe parallel library built on top of Async_rpc

Rpc_parallel offers an API to define various workers and protocols,
spawn workers as separate processes, and communicate with them using
Async Rpc.

"
