(executables
 (names breaking_things buffer_age_limit copy_executable env_test fd
  krb_expert qtest raise_on_connection_state_init remove_running_executable
  run_exn spawn_in_foreground_zombie stress_test timeouts wrap_test)
 (libraries async core_unix.command_unix rpc_parallel_krb_public core
  procfs_async qtest_deprecated sexplib)
 (preprocess (pps ppx_jane)))

(alias (name runtest) (deps qtest.exe)
 (action (bash "TESTING_FRAMEWORK= ./qtest.exe")))