(executables
 (modes byte exe)
 (names breaking_things buffer_age_limit copy_executable env_test fd
   krb_expert qtest raise_on_connection_state_init remove_running_executable
   run_exn shutdown_during_worker_init spawn_in_foreground_zombie stress_test
   timeouts wrap_test)
 (libraries async core_unix.command_unix core core_unix procfs_async
   qtest_deprecated rpc_parallel rpc_parallel_krb_public sexplib)
 (preprocess
  (pps ppx_jane)))

(rule
 (deps qtest.exe)
 (action
  (bash "TESTING_FRAMEWORK= ./qtest.exe"))
 (alias runtest))
